// Copyright 2000-2021 JetBrains s.r.o. and other contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.

plugins {
  id 'java'
  id 'org.jetbrains.intellij' version '1.3.0'
}

group 'org.intellij.sdk'
version '2.0.0'

sourceCompatibility = 11

repositories {
  mavenCentral()
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
  version = '2021.1.3'
  plugins = ['com.intellij.java']
}

buildSearchableOptions {
  enabled = false
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation group: 'commons-collections', name: 'commons-collections', version: '3.2'
    testImplementation group: 'junit', name: 'junit', version: '4.+'
    implementation "io.github.java-diff-utils:java-diff-utils:4.11"
    implementation group: 'com.madgag', name: 'util-diff', version: '1.22'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
    implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:2.14.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
    implementation 'org.jetbrains:marketplace-zip-signer:0.1.8'
}

patchPluginXml {
  version = project.version
  sinceBuild = '211'
  untilBuild = '223.*'
}

runIde {
  jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

signPlugin {
    certificateChain = """-----BEGIN CERTIFICATE-----
MIIGCzCCA/OgAwIBAgIUIP6m9MCoFt2To7AUdGSHWExzZg4wDQYJKoZIhvcNAQEL
BQAwgZQxCzAJBgNVBAYTAkNZMRcwFQYDVQQIDA5BZ2lvcyBEb21ldGlvczEQMA4G
A1UEBwwHTmljb3NpYTEPMA0GA1UECgwGSnVzdE1lMQ8wDQYDVQQLDAZKdXN0TWUx
DzANBgNVBAMMBkp1c3RNZTEnMCUGCSqGSIb3DQEJARYYaHVzc2Vpbi5tYXppYWRA
Z21haWwuY29tMB4XDTIzMDMwNTA3MjczMVoXDTI0MDMwNDA3MjczMVowgZQxCzAJ
BgNVBAYTAkNZMRcwFQYDVQQIDA5BZ2lvcyBEb21ldGlvczEQMA4GA1UEBwwHTmlj
b3NpYTEPMA0GA1UECgwGSnVzdE1lMQ8wDQYDVQQLDAZKdXN0TWUxDzANBgNVBAMM
Bkp1c3RNZTEnMCUGCSqGSIb3DQEJARYYaHVzc2Vpbi5tYXppYWRAZ21haWwuY29t
MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAs+i7Gsyd7LpWr28LJ1qx
k7iQIZEgvuDvLrFCmv6IudFlhknhEmhfecHIm4kyjQQzcNYdokKcGkBhq1uizEhT
y1ZglJZFWigyX1pqLm89opOvCYex1+PTCqhRWKe5SvGem4X/89/eBodmdSJ51nf+
VwK/zZx4jRNKs4iqwhcNvizVZqDI4FOf8pZyKaoacepZfoslRNQvdBBSiZ5X86gA
VG3rGDlFdJty+Wau5cp5VGjzYdbD/LrCpDdcDm6mFfQropkDcMJXFyXrYabZnaOG
Ff+dISgBHfvBexgAluIgTRYh9V9yJ/iaO2TyaKYBzE/4qLi/EZ1ujC91rjJCZsIS
G5Npb60mMVdR64GIaIvtivShYeXYKL/D2qPkCRaLxPdN0prWlCQ0iEivnuBRGj01
8A3zt39Upx2ih+qiRDypXCnjYoNed625VVuuKFJdKHNvv+eduLhAWY/uCrn4tkz0
DVXY064XqFWJN+aCuNLJSgMkfnxxgSp6t0Imcfp3t9jhqH4ogONiDhnxUBDA5cAF
+rd4qjZ6UuynHrnmWBdH+KnpVKCwL/DtmPf119XCj55RMaK7u1+AGdwTyAG6MwAC
ZYdW/tFM2+Y6MQ332WZHwWC/75SXQYHYWnzgXqB8a2Mkt2F6cVMl4NiFoWh/xlJh
nGbl9NopZVzdwm3GnQgMJ8sCAwEAAaNTMFEwHQYDVR0OBBYEFDmNL+MAw20Uwgk4
QhXpAZwFKFanMB8GA1UdIwQYMBaAFDmNL+MAw20Uwgk4QhXpAZwFKFanMA8GA1Ud
EwEB/wQFMAMBAf8wDQYJKoZIhvcNAQELBQADggIBADn4Tem9ywl3NPkG2ywS1rH9
BIexKMYj8KSqHfWwSNcsKqLNbZM/NrdD9nae4bQELjv9MVWMVs+PV+KyR50PdHuJ
eKIsv5jLkeNKhjw6qdfH9tTJBPHsD2/2VEDAlvf+85dNnVkdkHXoRe/N2ItMJ+6x
N75UpYGkIXupFASGKzmht0CasbzWNR/4Aiiguka0gVkzZBEmc09TSxJhKJ1z3hc8
jpgP3b49R607oJMMxP0QoQr/KCZbH25cumPN4kLAlQQ0/lePI3LXspzDJtyJhWx8
ztC+NJK8Mk49EWtg5abHjpwvUmR64AlS22lp/Vx15ILw/DHIq69LpXL64BxbU64P
dL+HPa1dcepAL1zqAe2jFLuUf7RRMroLGM8/hROabs3ORQh1hyFXzHL5FPPXKTu4
tmuRLfQDbKNGbmrIJMsBCJQNv3oAO0ihX0sHaxl4/FUd0a7ImgHoAD9X9ipAEcqD
0HbXT5/yATnWxue7SK+rPSVeoLfZeHDlaSQsEcMfJsGxG4ThGz8843h1OMit+RXu
cP85tfuqLfpwKDBsbp3ZelbEN/mrhPLO8zpuwJwHyDHLkMbPZRu3xRsKHZV1P/nB
pmEymwaSjta0esgiMZ28f/LSUOUe/2kKMvbt3HJcDzea8CBQNkxgdfcY6hLwuw+F
qa3jtvsVPTPDRPX9lmKS
-----END CERTIFICATE-----""".stripIndent()

    privateKey = """
-----BEGIN ENCRYPTED PRIVATE KEY-----
MIIJrTBXBgkqhkiG9w0BBQ0wSjApBgkqhkiG9w0BBQwwHAQIcVsWzNNLfR0CAggA
MAwGCCqGSIb3DQIJBQAwHQYJYIZIAWUDBAEqBBCW6N66rbVAYBPGRXyyabU9BIIJ
UJFcLnUFjrWc2Vzm0fQLj9Ge0oWcrqNeEuLH9cylEWnnbBE4X0HOPXidMNW8dvso
6M+CTTxzmxdCvMdnfL+ZimrE4NT7JMN0Jsai/85meGYrQArhNRdH26uhu73apM7Z
HNVqHYZ7hEIPjuLGYiif2is1SMlgb5WvUPwQGTxruqxAeG6XrYknf04Tao2ZxdTy
yz7N4nyiP+nMjk2IjSMcH/wiAW5vIRaBn/h7VGsNq8AzPagNu6MmQEBnshBTiWjH
2VTYU5p6nFm8q4PbySAAmd2o6CQdBkOs9V5+2ie1SqvZPwhYpi7KPAQxqNz9UVlO
nbGMq6fuus5FXCPfl7RnlidZNcURa7DD5iF79jo27VcN0Z7PytnVEeaQ86aPjEOb
nBBaUNOyP1Nz62Y5IM+3WqOExsngCdGPsWO6Kf1KlcYTBJSYaGJtP4jwaV6jnEHQ
bQIedeokO4timpLhOXijjli8zrAUl65kIAW4LqYxonQmzMW+RkrQwPsRJxNOcrxN
DSuCbOMELg6HOsGPKfugvuTcsKiXtUcCQYaG2AHJ/Ux2Yp9DRyNM6rrNUlsqIAEX
ehmtXwnSfV6w4JnpR6H2aHMhuTsLlbRg6w5nfZJgrRboG8M+DEViNrb+WTE10pgT
E/956KeSTylAbfWMvFYoHYisdJcOr712uoQTwFtsQkz9y1TXmgoFdCr1sPD6m9+i
cz52jM6vseFzGzEudydgCJe9ZN74CwD/pDl355PXc3lHzLL7MpfnxvKquW6ws4zI
SQWmWEAagD5f4f6KFRvCYB3nx/KxSY6ivqOPScjykP8KKlUdo1IY/VWTG4U6+oA6
4XOJlXDDNXCltUGzTS8tHA0VIuGgVe3Ufg/Zdg5j8SDKBeLl1VSdhj6AXa5Gh5e3
jbeF2v46n9a1NTQSfuM7lHBi1KboRr0dJC5/m4hfwKjCLVl5B37nu5+ZLCO9+ACs
7KNq0fzHh13CX3ZJRVQveb46a0LoeNx1EXVFJ3xNHpkdRrxNz+Sdo/CeyithkYuE
W8RZtgifYubQ7jT6oknUCVSfAO60B5MBgOna5Q/xo3ooGHyFyMLH+3Xw/J+TTHvC
+9LxZJdIF/g8klxt0bOfqsxWZIGoeBJ5KetPGPTRDWomZ6GB3aiTuc+rkZNfUjti
Z24J2K6YG72VdSX+CgQSpl/Z23OxGd4QuSgMZgjlz1czJ4HU4pnNdcooSwfEO3+m
YUnHCnJOZGblBPYfHpb6IN7+iCPblCxNBpCl4FySzITaHt2z31qe0I0bWKvZsL1+
N+rd53ZAnJs8Ll2uXRU/TtPpPXObcnVXhfU0SW2kYTKIIl0Vg/jMs45JVrTb7v8t
YuIHcdHRXXMMPvzEgT+4RmIMVym3HIqzrCBTUY5v3DRqVk4EeZ9guWbTFcFh4riT
xQ/PSjaJ/6J3l4xdBHLy3EuSmH+Hg34mJ+6iYDv+/nKTjE/AarPABioFuWiM+ZQI
UCMsLOtTTmbuQbIVnA7XdQP5o/+dOMRCCq5d1LIkDculLYO1aynozYtgGdbjLSN1
o+78nfKsUB1TyqjE4oyGpN0BJEEIqJanSAlYCzojd0fFmlqEQXBeimh37R/+DH5I
ebctei2vxfZESvH75SxN7r06+9WyizCMkmuLody/SEkIIzCdb1462TYFrs06l4sr
WDi0odeimelwJiRyGby0wEQEHeL4vABTKGjbBhjb3OrxVZS3bXIfZtI7qXqzfx1a
MZwFEk1+HjaO0EajhCpASrZ3bb+ldOirpQlQLHYhHaiWq8miauZoFJ0yHqpjXGOM
pFCKKHV11MW0JEaj+qW1ecg7Fwh3juOBpUx0lrXw0lDoLQrSlTD74rD3n5PVAsCf
R9/Dz7IEh3AOg1W2KKr9pK0hZQquWKXaNlUos4Z6KXq5a8lOpuT7uWEJx97mBfAz
SAWOiqlXl+ChZaIv5GG2lTW+xosZ/nbJc539H7ao3WOiF4uo03bhnMn/+iUaJufU
3aJLw3INv7dxE2sbSST//LG96V3SW5Bp0Ejw5n/2Hm7ND2tlW8t/xZPZZDyUfT5d
3uQIrvAi2rU3Smpk+xgiJ9RiNEhc2zlMPWUuYISp9z5Np8Jr9NoNK+yk8aUDF1LX
EjX3FwwVRP1KoQT6GMYJ8m0nLpqyyDhDnzpCnXDB7x5itNa/0feIwqjqCux7bLie
zcT3ca2RWbbhmS5UOAxo+epTmHKKkvRf1oJUFBPPfKzUEKG6rffSO2UprzVIC2WS
iki2fySjGnE45MfnmJsgJ4R/1672/TvbDm759UL1+V11BOkQAd1m7j6IokZjvDdl
wHaOfmw56ZbNpkdFiNogAuUBeQTHuiKrfsXXsY9lV35VuQFW6WPU9NdxHijmvpXs
CUnLdZBSdMV6qTxirXb+yOBJBH5tVQMhDFG/Fcs6c5siU5KbbJUjG0BRXKnvyJbP
sVf3cSaNP4KScxWP2RHEdIley8U8wK7DYYJvugF4GSCiHBYSt6ebOMzH7MSVZ3PK
IMKOKucCE1LrWM0TIg2rZRTa7knKGd8TZZszWXqOHKxB/zcMPrUJPluUd/m/g4o4
JLS6qabORrf0rwwpti3hozqcMQ1ZYRA2Qfufs084hY5A5r5+7V1SBmQdZ27QdExs
43Ow5SVmHHhO1AFKIZSQ4odfRc+BGNszVWI0F10zYAT8oYdO1H87oQKK/J0FGQo5
ewJEqloMbfzj2jhra9qyrMmizvoOC4O/irKgZHM/OR8No1O98x354HiwwYXJR6T9
squjrKMHXP0Eea/WEWlVSUHjA1g7tAcW1kmQcJCFOGCj3HEAgMl7JZIi4Bdt6owF
nAhGi0/qEfvOfNn6zhPuQdLcT/PcUkASXqR2aUKUVSXEQgbjd5a4NCYXL5kPgknf
keKJvF2njofSFYyZ2W3+a4cIgInXhOxyX0vtiRtspYYXcDxTKySLhppkg7t15EBM
5FR4AxaLyHGTPZhwibr2zKXqVh3K/fBjJyOWpkROBQJF2p8eVnNthh4Z6y4fl7bt
yYGh4Tajq5X23p9fOvx+tBMJieyxwbg+sFGKftqxOAC7C8b3BPlpyiT4v0yeLmAJ
GYGxcBSaJu9sMkjb/dXsVLDZqwDbbpIC5PCSb0+uSoPCVRDAcYp01KpugoSkamyc
W//ND9jdQODNNsGfevAoUAU+xRSzt2z/vHPcKPKCJ2vU
-----END ENCRYPTED PRIVATE KEY-----
""".stripIndent()

    password = "guesswhat"
}

publishPlugin{
    token = "perm:SHVzc2Vpbi5NQVpJQUQ=.OTItNzYwOQ==.P8OvlCSsLOgAJhyKnqDldNokyZJi4A"
}